--- a/blogpsot.html
+++ b/blogpsot.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>Titulo del Post</title>
-</head>
-<body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <P>Y este es el parrafo de inicio</P>
-</body>
+  </head>
+  <body>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el Titulo</h1>
+        <p>
+          y este es el parrafo don vamos a explicar la scoasa increible qye se
+          puede hacer con ramas
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
