--- a/blogpsot.html
+++ b/blogpsot.html
@@ -15,6 +15,7 @@
           y este es el parrafo don vamos a explicar la scoasa increible qye se
           puede hacer con ramas
         </p>
+        <p>los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockmaster. Pero estadisticamente no los eres. Por ahora </p>
       </div>
     </div>
   </body>
