--- a/blogpsot.html
+++ b/blogpsot.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
       <div id="post">
         <h1>Este es el Titulo</h1>
@@ -20,6 +20,7 @@
           puede hacer con ramas
         </p>
         <p>los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockmaster. Pero estadisticamente no los eres. Por ahora </p>
+        <p>Suscribete y dale like</p>
       </div>
     </div>
   </body>
